--- a/views/base.pug
+++ b/views/base.pug
@@ -19,5 +19,5 @@ html
         // Footer
         include _footer
 
-        script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.2/axios.min.js')
+        script(src='/js/axios.min.js')
         script(src='/js/login.js')
