--- a/views/base.pug
+++ b/views/base.pug
@@ -19,5 +19,4 @@ html
         // Footer
         include _footer
 
-        script(src='/js/axios.min.js')
-        script(src='/js/login.js')
+        script(src='/js/bundle.js')
